--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital@1&family=Epilogue:wght@400;700&family=MuseoModerno:ital,wght@1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital@1&family=Epilogue:wght@400;700&display=swap');
 @import 'variables';
+
+@font-face {
+  font-family: 'HappyOK';
+  font-weight: 1 1000;
+  src: url("https://awardwinninghuman.s3.eu-north-1.amazonaws.com/HappyOkRegular.woff2");
+}
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -71,6 +77,7 @@ h2 {
 	font-family: $accent-font;
 	color: #fff;
 	letter-spacing: 0.2rem;
+	font-style: italic;
 }
 
 h3 {
@@ -78,6 +85,7 @@ h3 {
 	font-family: $accent-font;
 	color: #fff;
 	letter-spacing: 0.2rem;
+	font-style: italic;
 }
 
 p:not(.titleClone), li {
@@ -93,6 +101,15 @@ p:not(.titleClone) {
 
 a, a:hover, a:active {
 	color: $max-contrast;
+}
+
+.sr-only {
+	position:absolute;
+	left:-10000px;
+	top:auto;
+	width:1px;
+	height:1px;
+	overflow:hidden;
 }
 
 body {
